# Citation_RAG

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  bm25.yaml  dense.yaml  rag.yaml  reranker.yaml
data/eval/: qrels.jsonl  qrels_1000_seed42.jsonl  queries_1000_seed42.jsonl
data/eval/results/: dense_medquad_1000_seed42.json  dense_rerank_medquad_1000_seed42.json  hybrid_rrf_medquad_1000_seed42.json
data/interim/: queries.jsonl
notebooks/: 01_data_audit.ipynb  02_chunking_experiments.ipynb  03_bm25_baseline_eval.ipynb
scripts/: build_bm25.py  build_chunks.py  build_dense_index.py  build_medquad_eval.py  freeze_eval_subset.py  prepare_corpus.py  run_answer_demo.py  run_bm25_eval.py  run_demo.py  run_dense_eval.py  run_hybrid_eval.py  run_rerank_eval.py  search_bm25.py  search_dense.py  search_hybrid.py  search_rerank.py
src/chunking/: chunker.py  policies.py  splitters.py
src/core/: config.py  logging_utils.py  types.py  utils.py
src/demo/: app.py  streamlit_app.py
src/evaluation/: bootstrap.py  faithfulness.py  generation_metrics.py  retrieval_metrics.py
src/generation/: answer_generator.py  citation_formatter.py  prompts.py
src/indexing/: bm25_index.py  faiss_index.py  metadata_store.py
src/ingestion/: cleaners.py  load_medquad.py  loaders.py  normalizers.py
src/reranking/: cross_encoder_reranker.py
src/retrieval/: bm25_retriever.py  dense_retriever.py  hybrid_fusion.py  retrieval_pipeline.py  simple_bm25.py
tests/: test_bm25.py  test_chunking.py  test_metrics.py  test_rrf.py
(+4 files in other folders)
